	* sysdeps/powerpc/powerpc64/Makefile (gmon): ..here..
	* sysdeps/powerpc/powerpc32/Makefile (gmon): ..and here.  Add
	ppc_mcount to static-only-routines.
	* sysdeps/powerpc/powerpc32/Versions: Export GLIBC_PRIVATE
	__mcount_internal.
	* sysdeps/powerpc/powerpc32/ppc-mcount.S (_mcount): Call
	__mcount_internal with usual JUMPTARGET.  Remove useless nop.

2011-08-04  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power7/strncmp.S: Adjust the alignment
	and add nop instructions for throughput optimization.
	* sysdeps/powerpc/powerpc64/power7/strncmp.S: Likewise.

2011-07-28  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power7/memcpy.S: Optimize the
	aligned copy for power7 with vector-scalar instructions.
	* sysdeps/powerpc/powerpc64/power7/memcpy.S: Likewise.

2011-07-24  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Simplify
	AVX check.

2011-09-07  Andreas Schwab  <schwab@redhat.com>

	[BZ #13144]
	* sysdeps/unix/sysv/linux/x86_64/bits/sem.h (semdid_ds): Revert
	last change.

2011-09-07  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/x86_64/init-first.c
	(_libc_vdso_platform_setup): If vDSO is not present store pointer to
	syscall wrapper around clock_gettime in __vdso_clock_gettime.
	* sysdeps/unix/sysv/linux/x86_64/syscalls.list: Add entry for
	clock_gettime.

2011-09-06  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/x86_64/clock_gettime.c (INTERNAL_GETTIME):
	Forgot to demangle the pointer.

	* sysdeps/i386/sysdep.h: Define atom_text_section.
	* sysdeps/x86_64/sysdep.h: Likewise.
	* sysdeps/i386/i686/multiarch/strchr-sse2-bsf.S: Place function in
	section with atom_text_section.
	* sysdeps/i386/i686/multiarch/strlen-sse2-bsf.S: Likewise.
	* sysdeps/i386/i686/multiarch/strrchr-sse2-bsf.S: Likewise.
	* sysdeps/x86_64/multiarch/strchr-sse2-no-bsf.S: Likewise.
	* sysdeps/x86_64/multiarch/strlen-no-bsf.S: Likewise.